@@ -1,5 +1,6 @@
 == 0.1.3
 * The Xpath function 's' will return an empty Rind::Node rather than +nil+.
+* Processing instructions were not being treated as nodes.
 
 == 0.1.2 - 2010.06.17
 * When parsing HTML, script and style tags will not break because of a "<" in their content.
